# cambada-pub

./: CMakeLists.txt  Doxyfile  README  README.txt  READ_ME.txt  toInstall_Ubuntu14.04
src/: CMakeLists.txt  common.h
src/agent/: CMakeLists.txt  Cambada.cpp  Cambada.h  Decision.cpp  Decision.h  DriveVector.cpp  DriveVector.h  main.cpp
src/agent/behaviours/: Behaviour.cpp  Behaviour.h  CambadaArbitrator.cpp  CambadaArbitrator.h
src/agent/behaviours/BallHandling/: BKickToTheirGoal.cpp  BKickToTheirGoal.h
src/agent/behaviours/General/: BStop.cpp  BStop.h  BStopRobotGS.cpp  BStopRobotGS.h
src/agent/behaviours/Striker/: BStrikerGoToBall.h
src/agent/behaviours/WithoutBall/: BGoToBall.h  BGoToVisibleBall.cpp  BGoToVisibleBall.h  BSearchBall.cpp  BSearchBall.h
src/agent/controllers/: CArc.cpp  CArc.h  CMove.cpp  CMove.h  CRotate.cpp  CRotate.h  CRotateAroundBall.cpp  CRotateAroundBall.h  Controller.cpp  Controller.h
src/agent/integrator/: CMakeLists.txt  Filter.h  IntegrateBall.cpp  IntegrateBall.h  IntegratePlayer.cpp  IntegratePlayer.h  Integrator.cpp  Integrator.h  Localization.h  ObstacleHandler.cpp  ObstacleHandler.h  ObstaclePositionKalman.cpp  ObstaclePositionKalman.h
src/agent/integrator/filters/: CMakeLists.txt  KalmanFilter.cpp  KalmanFilter.h  ParticleFilter.cpp  ParticleFilter.h
src/agent/integrator/localization/: CMakeLists.txt  UseCompass.cpp  UseCompass.h
src/agent/loc/: CMakeLists.txt  CambadaLoc.cc  CambadaLoc.h  FieldLUT.cc  FieldLUT.h  PositionKF.cpp  PositionKF.h  RobotLocation.h  RobotPositionKalmanFilter.cc  RobotPositionKalmanFilter.h  VisualPositionOptimiser.cc  VisualPositionOptimiser.h
src/agent/roles/: Role.cpp  Role.h  RoleStop.cpp  RoleStop.h  RoleStriker.cpp  RoleStriker.h
src/agent/strategy/: Formation.cpp  Formation.h  Strategy.cpp  Strategy.h  StrategyParser.cpp  StrategyParser.h  StrategyParser.lex
src/agent/world/: Ball.cpp  Ball.h  CMakeLists.txt  CoachInfo.cpp  CoachInfo.h  CoachLogModeInfo.h  Compass.cpp  Compass.h  Field.cpp  Field.h  GridView.h  KickCalibData.h  LowLevelInfo.cpp  LowLevelInfo.h  Obstacle.cpp  Obstacle.h  Robot.cpp  Robot.h  Sonar.cpp  Sonar.h  SystemInfo.cpp  SystemInfo.h  VisionInfo.cpp  VisionInfo.h  WorldState.cpp  WorldState.h  WorldStateDefs.h  Zones.cpp  Zones.h
src/comm/: CMakeLists.txt  MulticastSocket.cpp  MulticastSocket.h  comm.cpp  multicast.cpp  multicast.h  multicastLineSender.cpp  multicastReceiver.cpp
src/geom/: Angle.cc  Angle.h  CMakeLists.txt  Frame2D.cc  Frame2D.h  Vec.cc  Vec.h  geometry.cc  geometry.h
src/libs/: CMakeLists.txt
src/libs/pman/: CMakeLists.txt  pman-master-tester.cpp  pman-slave-tester.cpp  pman-tester.sh  pman.c  pman.h  pmandefs.h  sem_utils.c  sem_utils.h
src/libs/rtdb/: CMakeLists.txt  HWcomm_rtdb.h  rtdb.h  rtdb_api.c  rtdb_api.h  rtdb_comm.h  rtdb_sim.h  rtdb_user.h  rtdbdefs.h
src/libs/rtdb/parser/: CMakeLists.txt  rtdb_configuration.h.in  rtdb_ini_creator.c  rtdb_user_creator.c
src/tools/: CMakeLists.txt
src/tools/basestation/: CMakeLists.txt  Readme  basestation.pro  basestation.qrc  main.cpp
src/tools/basestation/FieldWidget/: FieldWidget.cpp  FieldWidget.h  FieldWidget3D.cpp  FieldWidget3D.h
src/tools/basestation/FullInfoWindow/: FullInfoWindow.cpp  FullInfoWindow.h  FullInfoWindow_WG.ui
src/tools/basestation/FullWindow/: FullWindow.cpp  FullWindow.h  FullWindow.ui
src/tools/basestation/LogWidget/: LogWidget.cpp  LogWidget.h  LogWidget.ui
src/tools/basestation/MainWindow/: MainWindow.cpp  MainWindow.h  MainWindow.ui
src/tools/basestation/RefBoxWidget/: RefBoxDialog.cpp  RefBoxDialog.h  RefBoxDialog.ui  RefBoxWG.ui  RefBoxWidget.cpp  RefBoxWidget.h  RefBoxXML.cpp  RefBoxXML.h
src/tools/basestation/RobotInfoWidget/: RobotInfoWG.ui  RobotInfoWidget.cpp  RobotInfoWidget.h
src/tools/basestation/RobotWidget/: RobotDialog.cpp  RobotDialog.h  RobotDialog.ui  RobotWidget.cpp  RobotWidget.h  robotwidget.ui
src/tools/basestation/UpdateWidget/: DB_Robot_info.h  UpdateWidget.cpp  UpdateWidget.h
src/tools/simulator/: Makefile  README
src/tools/simulator/csim-0.1.0/: AUTHORS  CMakeLists.txt  ChangeLog  config.h.in
src/tools/simulator/csim-0.1.0/cmake/: Cambada.cmake  DissectVersion.cmake  SearchForStuff.cmake  gazeborc.cmake
src/tools/simulator/csim-0.1.0/libgazebo/: CMakeLists.txt  Client.cc  Iface.cc  IfaceFactory.cc  IfaceFactory.hh  Server.cc  SimIface.cc  gazebo.h
src/tools/simulator/csim-0.1.0/server/: Angle.cc  Angle.hh  CMakeLists.txt  Common.cc  Common.hh  Entity.cc  Entity.hh  Factory.cc  Factory.hh  Field.cc  Field.hh  GazeboConfig.cc  GazeboConfig.hh  GazeboError.cc  GazeboError.hh  GazeboMessage.cc  GazeboMessage.hh  Global.hh  Model.cc  Model.hh  Param.cc  Param.hh  Pose3d.cc  Pose3d.hh  Quatern.cc  Quatern.hh  Simulator.cc  Simulator.hh  SingletonT.hh  Time.cc  Time.hh  Vector2.cc  Vector2.hh  Vector3.cc  Vector3.hh  Vector4.cc  Vector4.hh  World.cc  World.hh  XMLConfig.cc  (+2 more)
src/tools/simulator/csim-0.1.0/server/controllers/: CMakeLists.txt  Controller.cc  Controller.hh  ControllerFactory.cc  ControllerFactory.hh  ControllerStub.cc  ControllerStub.hh
src/tools/simulator/csim-0.1.0/server/drawstuff/: CMakeLists.txt  Draw.cc  Draw.hh  drawstuff.cc  drawstuff.h  internal.h  x11.cc
src/tools/simulator/csim-0.1.0/server/physics/: BallJoint.hh  Body.cc  (+32 more)
src/tools/simulator/csim-0.1.0/worlds/: CAMBADA.world  CMakeLists.txt  cambada.model
src/tools/simulator/tools/utils/: ctty.rb
src/util/: BallPositionKalman.cpp  BallPositionKalman.h  BallPositionParticle.cpp  BallPositionParticle.h  CMakeLists.txt  ClippedRamp.cpp  ClippedRamp.h  Clock.cpp  Clock.h  ConfigXML.cpp  ConfigXML.h  EgoMotionEstimator.cpp  EgoMotionEstimator.h  HeightMap.cpp  HeightMap.h  KickerConf.cpp  KickerConf.h  LinRegression.cpp  LinRegression.h  LinearRegression.cpp  LinearRegression.h  MersenneTwister.h  PID.cpp  PID.h  Param.cpp  Param.h  SharedTimer.cpp  SharedTimer.h  SlidingWindow.cpp  SlidingWindow.h  StuckRobotSensor.cpp  StuckRobotSensor.h  Timer.cpp  Timer.h  VelocityRegression.cpp  VelocityRegression.h  defines.h  log.h  random.h
(+116 files in other folders)
